unpackaged/main/default/objects/EventApi__Site_Event_Category__c/EventApi__Site_Event_Category__c.object-meta.xml
<CustomObject>
    <description>Control which events are displayed in which Sites for the portal.</description>
    <label>Site Event Category</label>
    <nameField>
        <displayFormat>{0000000}</displayFormat>
        <label>Site Event Category Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Site Event Categories</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>