unpackaged/main/default/objects/EventApi__Site_Event_Category__c/fields/EventApi__Event_Category__c.field-meta.xml
<CustomField>
    <fullName>EventApi__Event_Category__c</fullName>
    <label>Event Category</label>
    <referenceTo>EventApi__Event_Category__c</referenceTo>
    <relationshipLabel>Site Event Categories</relationshipLabel>
    <relationshipName>Site_Event_Categories</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <reparentableMasterDetail>true</reparentableMasterDetail>
    <type>MasterDetail</type>
</CustomField>