unpackaged/main/default/objects/EventApi__Site_Event_Category__c/fields/EventApi__Is_Active__c.field-meta.xml
<CustomField>
    <fullName>EventApi__Is_Active__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Is Active</label>
    <type>Checkbox</type>
</CustomField>