unpackaged/main/default/objects/EventApi__Site_Event_Category__c/fields/EventApi__Site__c.field-meta.xml
<CustomField>
    <fullName>EventApi__Site__c</fullName>
    <label>Site</label>
    <referenceTo>PagesApi__Site__c</referenceTo>
    <relationshipLabel>Site Event Categories</relationshipLabel>
    <relationshipName>Site_Event_Categories</relationshipName>
    <relationshipOrder>1</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>